<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/drawer_title">
    <menu>
        <item
            android:id="@+id/nav_1"
            android:icon="@drawable/baseline_face_24"
            android:title="@string/drawer_health" />

        <item
            android:id="@+id/nav_2"
            android:icon="@drawable/baseline_local_dining_24"
            android:title="@string/drawer_food" />
        <item
            android:id="@+id/nav_3"
            android:icon="@drawable/baseline_wb_iridescent_24"
            android:title="@string/drawer_technology" />
        <item
            android:id="@+id/nav_4"
            android:icon="@drawable/baseline_blur_linear_24"
            android:title="@string/drawer_science" />

    </menu>
</item>

    <item android:title="@string/drawer_title1">
        <menu>
            <item
                android:id="@+id/nav_search"
                android:icon="@drawable/baseline_search_24"
                android:title="@string/drawer_search" />
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/baseline_notification_important_24"
                android:title="@string/drawer_notification" />
        </menu>
    </item>

    <item android:title="@string/drawer_title2">
        <menu>
            <item
            android:id="@+id/nav_perso_ND"
            android:icon="@drawable/baseline_build_24"
            android:title="@string/drawer_personalization" />
        </menu>
    </item>
</menu>
